Tiny grammar fix

--- a/files/en-us/mdn/guidelines/css_style_guide/index.html
+++ b/files/en-us/mdn/guidelines/css_style_guide/index.html
@@ -13,7 +13,7 @@ tags:
 
 <div class="warning">
   <p><strong>Warning:</strong> We're currently in the process of converting all MDN content from HTML into Markdown. Currently you can write pages in HTML or in Markdown, but we don't want to mix formats within a section.</p>
-  <p>At the moment CSS, JavaScript and Web API documentation is in Markdown. So if you're writing content in that part of the site, this page is <em>not</em> applicable, and you should instead follow the guidelines in the <a href="/en-US/docs/MDN/Contribute/Markdown_in_MDN">Markdown in MDN</a> guide.</p>
+  <p>At the moment the CSS, JavaScript, and Web API documentation is in Markdown. So if you're writing content in that part of the site, this page is <em>not</em> applicable, and you should instead follow the guidelines in the <a href="/en-US/docs/MDN/Contribute/Markdown_in_MDN">Markdown in MDN</a> guide.</p>
 </div>
 
 <p>MDN has many built-in global styles available for use when styling and laying out articles, and this article is a guide to the available classes and when to use them.</p>
