--- a/files/en-us/mdn/contribute/markdown_in_mdn/index.html
+++ b/files/en-us/mdn/contribute/markdown_in_mdn/index.html
@@ -10,7 +10,7 @@ tags:
 
   <p><strong>Warning:</strong> We're currently in the process of converting all MDN content from HTML into Markdown. Currently you can write pages in HTML or in Markdown, but we don't want to mix formats within a section.</p>
 
-  <p>At the moment JavaScript, CSS and Web API documentation are in Markdown, so this page applies to those parts of the site. For other parts of the site, write documentation in HTML.</p>
+  <p>At the moment the JavaScript, CSS, and Web API documentation are in Markdown, so this page applies to those parts of the site. For other parts of the site, write documentation in HTML.</p>
 
 </div>
 
