--- a/files/en-us/glossary/clickjacking/index.html
+++ b/files/en-us/glossary/clickjacking/index.html
@@ -9,7 +9,7 @@ tags:
   - vulnerability
   - exploit
 ---
-<p>Clickjacking is an interface-based attack that tricks website users into unwarily clicking on malicious links. In clickjacking, the attackers embed their malicious links into buttons or legitimate pages in a website. In an infected {{glossary("Site")}}, whenever a user clicks on a legitimate link, the attacker gets the confidential information of that user - which ultimately compromises the user's privacy on the Internet. Clickjacking falls under the <a href="https://www.owasp.org/index.php/Top_10-2017_A6-Security_Misconfiguration">A6 – Security Misconfiguration</a> item in OWASP’s 2017 Top 10 list.</p> 
+<p>Clickjacking is an interface-based attack that tricks website users into unwarily clicking on malicious links. In clickjacking, the attackers embed their malicious links into buttons or legitimate pages in a website. In an infected {{glossary("Site")}}, whenever a user clicks on a legitimate link, the attacker gets the confidential information of that user, which ultimately compromises the user's privacy on the Internet.</p> 
 
 <p>Clickjacking can be prevented by implementing a Content Security Policy (CSP) and <a href="https://cheatsheetseries.owasp.org/cheatsheets/Clickjacking_Defense_Cheat_Sheet.html">other defense methods</a>.</p>
 
