--- a/files/en-us/glossary/clickjacking/index.html
+++ b/files/en-us/glossary/clickjacking/index.html
@@ -19,7 +19,7 @@ tags:
 <ul>
  <li><a href="/en-US/docs/Web/Security/Types_of_attacks#clickjacking">Clickjacking</a></li>
  <li><a href="https://en.wikipedia.org/wiki/Clickjacking">Clickjacking</a>on Wikipedia</li>
- <li><a href="https://owasp.org/www-community/attacks/Clickjacking">Clickjacking on OWASP</a></li>
+ <li><a href="https://owasp.org/www-community/attacks/Clickjacking">Clickjacking</a> on OWASP</li>
  <li><a href="https://www.getastra.com/blog/knowledge-base/clickjacking-all-you-need-to-know/">Example of Clickjacking in action</a></li>
  <li><a href="https://portswigger.net/web-security/clickjacking">Another article about Clickjacking</a></li>
 </ul>
