--- a/files/en-us/glossary/clickjacking/index.html
+++ b/files/en-us/glossary/clickjacking/index.html
@@ -21,5 +21,5 @@ tags:
  <li><a href="https://en.wikipedia.org/wiki/Clickjacking">Clickjacking</a>on Wikipedia</li>
  <li><a href="https://owasp.org/www-community/attacks/Clickjacking">Clickjacking</a> on OWASP</li>
  <li><a href="https://www.getastra.com/blog/knowledge-base/clickjacking-all-you-need-to-know/#Example_of_Clickjacking_in_Action">Example of Clickjacking in action</a></li>
- <li><a href="https://portswigger.net/web-security/clickjacking">Another article about Clickjacking</a></li>
+ <li><a href="https://portswigger.net/web-security/clickjacking">Clickjacking (UI redressing)</a> on PortSwigger Web Security Academy</li>
 </ul>
