--- a/files/en-us/glossary/clickjacking/index.html
+++ b/files/en-us/glossary/clickjacking/index.html
@@ -11,13 +11,13 @@ tags:
 ---
 <p>Clickjacking is an interface-based attack that tricks website users into unwarily clicking on malicious links. In clickjacking, the attackers embed their malicious links into buttons or legitimate pages in a website. In an infected {{glossary("Site")}}, whenever a user clicks on a legitimate link, the attacker gets the confidential information of that user, which ultimately compromises the user's privacy on the Internet.</p> 
 
-<p>Clickjacking can be prevented by implementing a Content Security Policy (CSP) and <a href="https://cheatsheetseries.owasp.org/cheatsheets/Clickjacking_Defense_Cheat_Sheet.html">other defense methods</a>.</p>
+<p>Clickjacking can be prevented by implementing a <a href="/en-US/docs/Web/HTTP/Headers/Content-Security-Policy/frame-ancestors">Content Security Policy (frame-ancestors)</a> and implementing <a href="/en-US/docs/Web/HTTP/Headers/Set-Cookie#attributes">Set-Cookie attributes</a>.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
 
 <ul>
- <li><a href="/en-US/docs/Web/Security/Types_of_attacks#clickjacking">Clickjacking</a></li>
+ <li><a href="/en-US/docs/Web/Security#clickjacking_protection">Clickjacking</a></li>
  <li><a href="https://en.wikipedia.org/wiki/Clickjacking">Clickjacking</a>on Wikipedia</li>
  <li><a href="https://owasp.org/www-community/attacks/Clickjacking">Clickjacking</a> on OWASP</li>
  <li><a href="https://www.getastra.com/blog/knowledge-base/clickjacking-all-you-need-to-know/#Example_of_Clickjacking_in_Action">Example of Clickjacking in action</a></li>
