Remove deprecated api.Window.mozAnimationStartTime from MDN

--- a/files/en-us/mozilla/firefox/releases/4/index.html
+++ b/files/en-us/mozilla/firefox/releases/4/index.html
@@ -263,7 +263,7 @@ tags:
  <dt><a href="/en-US/docs/Web/API/History_API">Manipulating the browser history</a></dt>
  <dd>The existing document history object, available through the {{domxref("window.history")}} object, now supports the new HTML5 <code>pushState()</code> and <code>replaceState()</code> methods.</dd>
  <dt><a href="/en-US/docs/DOM/Animations_using_MozBeforePaint">Animations using MozBeforePaint</a></dt>
- <dd>A new event has been added which, in concert with the <code>window.mozRequestAnimationFrame()</code> method and {{domxref("window.mozAnimationStartTime")}} property, provides a way to create animations that are synchronized with one another.</dd>
+ <dd>A new event has been added which, in concert with the <code>window.mozRequestAnimationFrame()</code> method and <code>window.mozAnimationStartTime</code> property, provides a way to create animations that are synchronized with one another.</dd>
  <dt>Touch and multi-touch events</dt>
  <dd>Support has been added for touch and multi-touch events.</dd>
 </dl>
