--- a/files/en-us/mdn/kitchensink/index.html
+++ b/files/en-us/mdn/kitchensink/index.html
@@ -8,8 +8,7 @@ tags:
 <div>{{MDNSidebar}}</div>
 
 <div class="notecard warning">
-  <h4>Warning</h4>
-  <p><b>Don't delete this page.</b> It's used by
+  <p><strong>Warning:</strong> Don't delete this page. It's used by
     <a href="https://github.com/mdn/yari">mdn/yari</a> for its automation.</p>
 </div>
 
@@ -23,13 +22,11 @@ styles and macros. Let's start with some notes...</p>
 <p>Text that uses the <code>&lt;kbd&gt;</code> tag: <kbd>Shift</kbd></p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Here's a block indicator note.</p>
+  <p><strong>Note:</strong> Here's a block indicator note.</p>
 </div>
 
 <div class="notecard warning">
-  <h4>Warning</h4>
-  <p>Here's a block indicator warning.</p>
+  <p><strong>Warning:</strong> Here's a block indicator warning.</p>
 </div>
 
 <h2>Prev/Next buttons</h2>
