--- a/files/en-us/mdn/contribute/howto/convert_code_samples_to_be_live/index.html
+++ b/files/en-us/mdn/contribute/howto/convert_code_samples_to_be_live/index.html
@@ -12,24 +12,24 @@ tags:
 
 <p>Live samples, which let you see what a sample's output looks like, make documentation more dynamic and instructive. This guide covers how to take existing samples and add "live" functionality to them.</p>
 
-<dl>
- <dt><strong>Where does it need to be done?</strong></dt>
- <dd>Any article that has a static code example (just blocks of HTML, CSS, JavaScript) that you think would benefit from being shown running live.</dd>
- <dt><strong>What do you need to know to do the task?</strong></dt>
- <dd>
- <ul>
+<h2>Where does it need to be done?</h2>
+
+<p>Any article that has a static code example (just blocks of HTML, CSS, JavaScript) that you think would benefit from being shown running live.</p>
+
+
+<h2>What do you need to know to do the task?</h2>
+
+<ul>
   <li>Understanding of HTML, CSS and/or JavaScript, depending on the code sample.</li>
   <li>Ability to use <a href="/en-US/docs/MDN/Tools/KumaScript">KumaScript</a> macros within MDN articles.</li>
- </ul>
- </dd>
- <dt><strong>What are the steps to do the task?</strong></dt>
- <dd>
- <ol>
+</ul>
+
+<h2>What are the steps to do the task?</h2>
+
+<ol>
   <li>Find a code example that you think should be converted to be "live".</li>
   <li>Convert the code sample to be "live".</li>
   <li>Delete any code or image that was previously used to display the output of the sample.</li>
- </ol>
- </dd>
-</dl>
+</ol>
 
 <p>For more information on creating and editing Live Samples, see <a href="/en-US/docs/MDN/Structures/Live_samples">Using the live sample system</a></p>
