Learn: Remove non-heading ID attributes

--- a/files/en-us/learn/forms/advanced_form_styling/index.html
+++ b/files/en-us/learn/forms/advanced_form_styling/index.html
@@ -258,7 +258,7 @@ input[type="checkbox"]:disabled {
  <li><code>:disabled</code> — the checkbox (or radio button) is in a disabled state — it cannot be interacted with.</li>
 </ul>
 
-<p id="results">You can see the live result:</p>
+<p>You can see the live result:</p>
 
 <p>{{EmbedGHLiveSample("learning-area/html/forms/styling-examples/checkboxes-styled.html", '100%', 200)}}</p>
 
