--- a/files/en-us/learn/common_questions/using_github_pages/index.html
+++ b/files/en-us/learn/common_questions/using_github_pages/index.html
@@ -50,7 +50,7 @@ tags:
 <p><strong>Note</strong>: You could also consider using a <a href="https://git-scm.com/downloads/guis">Git graphical user interface</a> to do the same work, if you feel uncomfortable with the command line.</p>
 </div>
 
-<p><span id="command-line">Every operating system comes with a command line tool:</span></p>
+<p>Every operating system comes with a command line tool:</p>
 
 <ul>
  <li><strong>Windows</strong>: <strong>Command Prompt</strong> can be accessed by pressing the Windows key, typing <em>Command Prompt</em>, and choosing it from the list that appears. Note that Windows has its own command conventions differing from Linux and OS X, so the commands below may vary on your machine.</li>
