--- a/files/en-us/learn/javascript/building_blocks/image_gallery/index.html
+++ b/files/en-us/learn/javascript/building_blocks/image_gallery/index.html
@@ -17,7 +17,7 @@ tags:
 
 <div>{{PreviousMenu("Learn/JavaScript/Building_blocks/Events", "Learn/JavaScript/Building_blocks")}}</div>
 
-<p class="summary">Now that we've looked at the fundamental building blocks of JavaScript, we'll test your knowledge of loops, functions, conditionals and events by getting you to build a fairly common item you'll see on a lot of websites — a JavaScript-powered image gallery.</p>
+<p>Now that we've looked at the fundamental building blocks of JavaScript, we'll test your knowledge of loops, functions, conditionals and events by getting you to build a fairly common item you'll see on a lot of websites — a JavaScript-powered image gallery.</p>
 
 <table>
  <tbody>
@@ -151,7 +151,3 @@ overlay.style.backgroundColor = xxx;</pre>
  <li><a href="/en-US/docs/Learn/JavaScript/Building_blocks/Events">Introduction to events</a></li>
  <li><strong>Image gallery</strong></li>
 </ul>
-
-<div id="gtx-trans" style="position: absolute; left: 1355px; top: 3393px;">
-<div class="gtx-trans-icon"></div>
-</div>
