--- a/files/en-us/learn/javascript/first_steps/useful_string_methods/index.html
+++ b/files/en-us/learn/javascript/first_steps/useful_string_methods/index.html
@@ -37,7 +37,7 @@ tags:
 
 <h2 id="Strings_as_objects">Strings as objects</h2>
 
-<p id="Useful_string_methods">Most things are objects in JavaScript. When you create a string, for example by using</p>
+<p>Most things are objects in JavaScript. When you create a string, for example by using</p>
 
 <pre class="brush: js">let string = 'This is my string';</pre>
 
@@ -146,10 +146,7 @@ radData.toUpperCase();</pre>
  <li>Hint: In this case it is probably more useful to test whether the method call <em>isn't</em> equal to a certain result.</li>
 </ol>
 
-<div class="hidden">
-<h6 id="Playable_code">Playable code</h6>
-
-<pre class="brush: html">&lt;h2&gt;Live output&lt;/h2&gt;
+<pre class="brush: html hidden">&lt;h2&gt;Live output&lt;/h2&gt;
 
 &lt;div class="output" style="min-height: 125px;"&gt;
 
@@ -189,7 +186,7 @@ for (let i = 0; i &lt; greetings.length; i++) {
 &lt;/div&gt;
 </pre>
 
-<pre class="brush: css">html {
+<pre class="brush: css hidden">html {
   font-family: sans-serif;
 }
 
@@ -209,7 +206,7 @@ body {
   background: #f5f9fa;
 }</pre>
 
-<pre class="brush: js">const textarea = document.getElementById('code');
+<pre class="brush: js hidden">const textarea = document.getElementById('code');
 const reset = document.getElementById('reset');
 const solution = document.getElementById('solution');
 let code = textarea.value;
@@ -302,9 +299,8 @@ textarea.onkeyup = function(){
 
   updateCode();
 };</pre>
-</div>
 
-<p>{{ EmbedLiveSample('Playable_code', '100%', 590, "", "", "hide-codepen-jsfiddle") }}</p>
+<p>{{ EmbedLiveSample('Filtering_greeting_messages', '100%', 600) }}</p>
 
 <h3 id="Fixing_capitalization">Fixing capitalization</h3>
 
@@ -321,10 +317,7 @@ textarea.onkeyup = function(){
 <p><strong>Note</strong>: A hint — the parameters of the string methods don't have to be string literals; they can also be variables, or even variables with a method being invoked on them.</p>
 </div>
 
-<div class="hidden">
-<h6 id="Playable_code_2">Playable code 2</h6>
-
-<pre class="brush: html">&lt;h2&gt;Live output&lt;/h2&gt;
+<pre class="brush: html hidden">&lt;h2&gt;Live output&lt;/h2&gt;
 
 &lt;div class="output" style="min-height: 125px;"&gt;
 
@@ -359,7 +352,7 @@ for (let i = 0; i &lt; cities.length; i++) {
 &lt;/div&gt;
 </pre>
 
-<pre class="brush: css">html {
+<pre class="brush: css hidden">html {
   font-family: sans-serif;
 }
 
@@ -379,7 +372,7 @@ body {
   background: #f5f9fa;
 }</pre>
 
-<pre class="brush: js">const textarea = document.getElementById('code');
+<pre class="brush: js hidden">const textarea = document.getElementById('code');
 const reset = document.getElementById('reset');
 const solution = document.getElementById('solution');
 let code = textarea.value;
@@ -470,9 +463,8 @@ textarea.onkeyup = function(){
 
   updateCode();
 };</pre>
-</div>
 
-<p>{{ EmbedLiveSample('Playable_code_2', '100%', 550, "", "", "hide-codepen-jsfiddle") }}</p>
+<p>{{ EmbedLiveSample('Fixing_capitalization', '100%', 550) }}</p>
 
 <h3 id="Making_new_strings_from_old_parts">Making new strings from old parts</h3>
 
@@ -494,10 +486,7 @@ textarea.onkeyup = function(){
  <li>Change the value of the <code>result</code> variable to equal to the final string, not the <code>input</code>.</li>
 </ol>
 
-<div class="hidden">
-<h6 id="Playable_code_3">Playable code 3</h6>
-
-<pre class="brush: html">&lt;h2&gt;Live output&lt;/h2&gt;
+<pre class="brush: html hidden">&lt;h2&gt;Live output&lt;/h2&gt;
 
 &lt;div class="output" style="min-height: 125px;"&gt;
 
@@ -536,7 +525,7 @@ for (let i = 0; i &lt; stations.length; i++) {
 &lt;/div&gt;
 </pre>
 
-<pre class="brush: css">html {
+<pre class="brush: css hidden">html {
   font-family: sans-serif;
 }
 
@@ -557,7 +546,7 @@ body {
 }
 </pre>
 
-<pre class="brush: js">const textarea = document.getElementById('code');
+<pre class="brush: js hidden">const textarea = document.getElementById('code');
 const reset = document.getElementById('reset');
 const solution = document.getElementById('solution');
 let code = textarea.value;
@@ -651,9 +640,8 @@ textarea.onkeyup = function(){
 
   updateCode();
 };</pre>
-</div>
 
-<p>{{ EmbedLiveSample('Playable_code_3', '100%', 585, "", "", "hide-codepen-jsfiddle") }}</p>
+<p>{{ EmbedLiveSample('Making_new_strings_from_old_parts', '100%', 600) }}</p>
 
 <h2 id="Test_your_skills!">Test your skills!</h2>
 
