--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/genre_detail_page/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/genre_detail_page/index.html
@@ -65,7 +65,7 @@ It is also used to get all <code>Book</code> objects that have the genre ID in t
 }
 </pre>
 
-<p>The message will then propagate through to our error handling code (this was set up when we <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/skeleton_website#error_handling">generated the app skeleton</a> - for more information see <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/Introduction#handling_errors">Handling Errors</a>).</p>
+<p>The message will then propagate through to our error handling code (this was set up when we <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/skeleton_website#app.js">generated the app skeleton</a> - for more information see <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/Introduction#handling_errors">Handling Errors</a>).</p>
 </div>
 
 <p>The rendered view is <strong>genre_detail</strong> and it is passed variables for the <code>title</code>, <code>genre</code> and the list of books in this genre (<code>genre_books</code>).</p>
