--- a/files/en-us/learn/common_questions/checking_that_your_web_site_is_working_properly/index.html
+++ b/files/en-us/learn/common_questions/checking_that_your_web_site_is_working_properly/index.html
@@ -11,9 +11,7 @@ tags:
   - WebMechanics
   - troubleshooting
 ---
-<div class="summary">
 <p>In this article we go over various troubleshooting steps for a website and some basic actions to take in order to solve these issues.</p>
-</div>
 
 <table>
  <tbody>
@@ -28,7 +26,7 @@ tags:
  </tbody>
 </table>
 
-<p id="Summary">So you've published your website online? Very good! But are you sure it works properly?</p>
+<p>So you've published your website online? Very good! But are you sure it works properly?</p>
 
 <p>A distant web server often behaves quite differently from a local one, so it's a good idea to test your website once it's online. You might be surprised at how many problems come up: images don't show up, pages don't load or load slowly, and so on. Most of the time it's no big deal, just a simple mistake or an issue with your web hosting configuration.</p>
 
